--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1924,7 +1924,7 @@
     "Enum:NotificationFilter.5": "退貨",
     "Enum:NotificationFilter.6": "轉帳",
     "NoNotificationsFound": "沒有找到通知。",
-    "VipSettingsUpdated": "VIP tier settings have been successfully updated and saved.",
+    "VipSettingsUpdated": "VIP 等級設定已成功更新並儲存。",
     "ShortCodePatternDoesnotMatch": "「簡碼格式不符合要求！僅允許字母和數字，且長度需在為4 到 12 個字元」",
     "Pikachu:GroupBuyShortCodeCannotBeNull": "「請輸入團購簡碼」",
     "SelfPickup": "自取",
