#PK-1675 Localization and Tenant connection handling

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1884,8 +1884,8 @@
     "Permission:InboxManagement": "Inbox Management",
     "Menu:Inbox": "Inbox",
     "Notifications": "Notifications",
-    "OrderMessages": "Order Messages",
-    "BankTransfers": "Bank Transfers",
+    "Notification:Orders": "Orders",
+    "PaymentVerification": "Payment Verification",
     "RefundRequests": "Refund Requests",
     "ReturnsAndExchanges": "Returns & Exchanges",
     "Notification:Orders:CreatedTitle": "Order created #{OrderNo}",
