--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1852,9 +1852,12 @@
     "Insufficient Balance": "錢包餘額不足",
     "Permission:InboxManagement": "收件匣管理",
     "Menu:Inbox": "收件匣",
+    "Inbox": "收件匣",
+    "Read": "已讀",
+    "Unread": "未讀",
     "Notifications": "通知",
-    "OrderMessages": "訂單訊息",
-    "BankTransfers": "銀行轉帳",
+    "Notification:Orders": "訂單",
+    "PaymentVerification": "收款確認",
     "RefundRequests": "退款申請",
     "ReturnsAndExchanges": "退貨與換貨",
     "Notification:Orders:CreatedTitle": "訂單已建立 #{OrderNo}",
