Commit For Pk-1815

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2027,7 +2027,8 @@
     "LogisticsFeeStatus": "Logistics Fee Status",
     "LogisticFees": "Logistic Fees",
     "DeliveryOptions": "Delivery Options",
-    "Menu:PlatformManagement": "Platform Management"
+    "Menu:PlatformManagement": "Platform Management",
+    "ExchangeOrderButton": "Exchange Order"
 
 
   }
