#PK-1813 Dynamic form implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2034,21 +2034,24 @@
     "EcPayPaymentFees": "ECPay Payment Fees",
     "EcPayPaymentFeeConfiguration": "ECPay Payment Fee Configuration",
     "EcPayPaymentFees_Desc": "Configure additional fees for different payment methods. The fee can be a percentage of the checkout total or a fixed amount.",
-    "CreditCardPaymentOptions": "Credit Card Payment Options",
+    "Enum:PaymentFeeSubType.0": "Credit Card Payment Options",
+    "Enum:PaymentFeeSubType.1": "Other Payment Methods",
+    "Enum:PaymentFeeSubType.2": "TCat Payment Options",
     "ProcessingFee": "Processing Fee",
     "PercentageFee": "Percentage Fee",
     "FixedAmount": "Fixed Amount",
-    "OneTimePayment": "One-Time Payment",
-    "3MonthInstallment": "3-Month Installment",
-    "6MonthInstallment": "6-Month Installment",
-    "12MonthInstallment": "12-Month Installment",
-    "18MonthInstallment": "18-Month Installment",
-    "24MonthInstallment": "24-Month Installment",
+    "Enum:PaymentFeeMethods.0": "One-Time Payment",
+    "Enum:PaymentFeeMethods.1": "Virtual Account",
+    "Enum:PaymentFeeMethods.3": "Cash on Delivery",
+    "Enum:PaymentFeeMethods.5": "Online ATM",
+    "Enum:PaymentFeeMethods.6": "3-Month Installment",
+    "Enum:PaymentFeeMethods.7": "6-Month Installment",
+    "Enum:PaymentFeeMethods.8": "12-Month Installment",
+    "Enum:PaymentFeeMethods.9": "18-Month Installment",
+    "Enum:PaymentFeeMethods.10": "24-Month Installment",
     "DreamPlan30MonthInstallment": "Dream Plan 30-Month Installment",
     "UnionPayCard": "UnionPay Card",
     "OtherPaymentMethods": "Other Payment Methods",
-    "VirtualAccount": "Virtual Account",
-    "OnlineAtm": "Online ATM",
     "CvsCode": "CVS Code",
     "CvsBarcode": "CVS Barcode",
     "SavePaymentFeeSettings": "Save Payment Fee Settings",
