--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2027,19 +2027,22 @@
     "EcPayPaymentFees": "綠界金流費用設定",
     "EcPayPaymentFeeConfiguration": "綠界金流費用設定",
     "EcPayPaymentFees_Desc": "為不同的綠界付款方式設定額外費用。費用可以是訂單總金額的百分比，或是固定金額。",
-    "CreditCardPaymentOptions": "信用卡費用設定",
+    "Enum:PaymentFeeSubType.0": "信用卡費用設定",
+    "Enum:PaymentFeeSubType.1": "其他付款方式",
+    "Enum:PaymentFeeSubType.2": "黑貓付款選項",
     "ProcessingFee": "處理費",
-    "OneTimePayment": "一次付清",
-    "3MonthInstallment": "分期3期",
-    "6MonthInstallment": "分期6期",
-    "12MonthInstallment": "分期12期",
-    "18MonthInstallment": "分期18期",
-    "24MonthInstallment": "分期24期",
+    "Enum:PaymentFeeMethods.0": "一次付清",
+    "Enum:PaymentFeeMethods.1": "網路ATM",
+    "Enum:PaymentFeeMethods.3": "貨到付款",
+    "Enum:PaymentFeeMethods.5": "ATM櫃員機 (虛擬帳號)",
+    "Enum:PaymentFeeMethods.6": "分期3期",
+    "Enum:PaymentFeeMethods.7": "分期6期",
+    "Enum:PaymentFeeMethods.8": "分期12期",
+    "Enum:PaymentFeeMethods.9": "分期18期",
+    "Enum:PaymentFeeMethods.10": "分期24期",
     "DreamPlan30MonthInstallment": "圓夢彈性分期30期",
     "UnionPayCard": "銀聯卡",
     "OtherPaymentMethods": "其他付款方式",
-    "VirtualAccount": "網路ATM",
-    "OnlineAtm": "ATM櫃員機 (虛擬帳號)",
     "CvsCode": "超商代碼",
     "CvsBarcode": "超商條碼",
     "SavePaymentFeeSettings": "儲存金流費用設定",
