Commit for Pk-1835

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2068,6 +2068,10 @@
     "TCatPaymentFeeConfigurations": "T Cat Payment Fee Configuration",
     "TCatPaymentFeeConfigurations_Desc": "Configure additional fees for T Cat payment methods. The fee can be a percentage of the checkout total or a fixed amount.",
     "TCatPaymentOptions": "T Cat Payment Options",
-    "SaveTCatPaymentFeeSettings": "Save T Cat Payment Fee Settings"
+    "SaveTCatPaymentFeeSettings": "Save T Cat Payment Fee Settings",
+    "BaseShippingFee": "Base Shipping Fee",
+    "Surcharge": "Surcharge",
+    "AdditionalFee": "Additional Fee",
+    "TotalLogisticFee": "Total Logistic Fee"
   }
 }
