Commit for Pk-1838

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2072,6 +2072,7 @@
     "BaseShippingFee": "Base Shipping Fee",
     "Surcharge": "Surcharge",
     "AdditionalFee": "Additional Fee",
-    "TotalLogisticFee": "Total Logistic Fee"
+    "TotalLogisticFee": "Total Logistic Fee",
+    "NoFileChosen": " No file chosen"
   }
 }
