--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -73,9 +73,9 @@
     "B-Frozen": "黑貓冷凍",
     "BlackCat": "綠界 | 黑貓宅急便",
     "EcpayBlackCat": "綠界 | 黑貓宅急便",
-    "BlackCat1": "綠界 | 黑貓宅急便",
-    "BlackCatFreeze": "黑貓冷藏",
-    "BlackCatFrozen": "黑貓冷凍",
+    "BlackCat1": "綠界 | 黑貓常溫",
+    "BlackCatFreeze": "綠界 | 黑貓冷藏",
+    "BlackCatFrozen": "綠界 | 黑貓冷凍",
     "BlackCatHomeDelivery": "黑貓宅急便",
     "BloggersShareProfit": "團主分潤",
     "B-Normal": "黑貓常溫",
@@ -168,8 +168,8 @@
     "Fail": "退款失敗",
     "Failed": "失敗",
     "FamilyMart": "全家",
-    "FamilyMart1": "綠界 | 全家",
-    "FamilyMartC2c": "綠界 | 全家 C2C",
+    "FamilyMart1": "綠界 | 全家 B2C",
+    "FamilyMartC2c": "綠界 | 全家C2C",
     "FamilyMartC2C": "全家 C2C",
     "Filter": "篩選",
     "First": "前置",
@@ -1412,7 +1412,7 @@
     "SaveSettings": "儲存",
     "Size": "商品尺寸",
     "Yes": "是",
-    "PostOffice": "郵局",
+    "PostOffice": "綠界 | 郵局",
     "Invoicehasvoided": "發票已成功做廢",
     "ToUsePoints": "可使用點數",
     "Weight": "商品重量",
@@ -1579,10 +1579,14 @@
     "Menu:Inventory": "庫存管理",
     "InventoryManagement": "庫存管理",
     "Timestamp": "時間",
-    "Enum:InventoryActionType.0": "Add Stock",
-    "Enum:InventoryActionType.1": "Deduct Stock",
+    "Enum:InventoryStockType.0": "目前庫存",
+    "Enum:InventoryStockType.1": "可銷售庫存",
+    "Enum:InventoryStockType.2": "預售數量",
+    "Enum:InventoryStockType.3": "可銷售預售數量",
+    "Enum:InventoryActionType.0": "新增庫存",
+    "Enum:InventoryActionType.1": "扣除庫存",
     "Enum:InventoryActionType.2": "商品售出",
-    "Enum:InventoryActionType.3": "Add-on Product Sold",
+    "Enum:InventoryActionType.3": "加購商品售出",
     "StockAdded": "手動入庫",
     "StockDeducted": "手動出庫",
     "ItemSold": "商品售出: 訂單 #{0}",
@@ -2056,6 +2060,15 @@
     "BaseShippingFee": "基礎運費",
     "Surcharge": "附加費用",
     "AdditionalFee": "額外費用",
-    "TotalLogisticFee": "運費總金額"
+    "TotalLogisticFee": "運費總金額",
+    "MinCurrentStock": "目前庫存 (最小值)",
+    "MaxCurrentStock": "目前庫存 (最小值)",
+    "MinAvailableStock": "目前庫存 (最小值)",
+    "MaxAvailableStock": "目前庫存 (最小值)",
+    "NoStockAdjustmentDescription": "此商品尚未有任何庫存異動紀錄。",
+    "SevenToEleven1": "綠界 | 7-11 B2C",
+    "SevenToElevenC2C": "綠界 | 7-11 C2C",
+    "NoFileChosen": "未選擇檔案"
+
   }
 }
