fix for Pk-1817 & 1838

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -170,7 +170,7 @@
     "FamilyMart": "全家",
     "FamilyMart1": "綠界 | 全家 B2C",
     "FamilyMartC2c": "綠界 | 全家C2C",
-    "FamilyMartC2C": "全家 C2C",
+    "FamilyMartC2C": "綠界 | 全家C2C",
     "Filter": "篩選",
     "First": "前置",
     "Footer": "結尾訊息",
